# modules_dtbtools

./: CMakeLists.txt  EFIDroid.ini  EFIDroidDependencies.ini
include/: dev_tree.h  list.h  smem.h
src/: dtbefidroidify.c  dtbtool.c  fdtextract.c  main.c  qcdtextract.c  smemparse.c
